--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,7 @@ html, body {
 	background-color: #1a1a1a;
 	margin: 0;
 	height: 100%;
+	font-family: 'ProximaNovaRegular';
 }
 
 .wrapper-container {
@@ -11,11 +12,10 @@ html, body {
 }
 
 .left-panel {
-    width: 28%;
+    width: 29%;
     height: 100%;
     color: #fff;
     display: inline-block;
-    padding-left: 10px;
     vertical-align: top;
 }
 
@@ -28,7 +28,7 @@ html, body {
 }
 .main-container {
     display: inline-block;
-    width: 71%;
+    width: 70.5%;
     height: 100%;
     background-color: rgba(11, 16, 33, 1);
 }
@@ -44,17 +44,20 @@ html, body {
 	list-style: none;
     margin-top: 5px;
     padding-left: 0;
+    margin-bottom: 0;
 }
 
 .currency-pair-container {
     display: inline-block;
+    margin-bottom: 15px;
     min-height: 100px;
-    width: 120px;
+    width: 12%;
     border: 1px solid aqua;
     border-radius: 10px;
     margin-right: 17px;
     background-color: #111111;
     cursor: pointer;
+    vertical-align: text-top;
 }
 
 .currency-pair-container:hover .currency-pair-title {
@@ -63,15 +66,16 @@ html, body {
 
 .currency-pair-container.selected {
 	cursor: default;
-	border-color: yellowgreen;
+	border-color: cyan;
 }
 
 .currency-pair-container.selected .currency-pair-title {
-    background-color: rgba(34, 224, 5, 0.8);
+    background-color: cyan;/*rgba(34, 224, 5, 0.8);*/
+    color: black;
 }
 
 .currency-pair-container.selected .live-currency-info {
-	color: rgba(34, 224, 5, 0.8);
+	color: cyan; /*rgba(34, 224, 5, 0.8);*/
 }
 
 .currency-pair-title {
@@ -81,12 +85,55 @@ html, body {
     font-size: 14px;
     border-top-right-radius: 8px;
     border-top-left-radius: 8px;
+    font-family: 'ProximaNovaBold';
 }
 
 .live-currency-info {
 	text-align: center;
 	padding: 20px;
+	padding-bottom: 0;
+    font-size: 14px;
+    font-family: 'ProximaNovaRegular';
+    font-weight: bold;
+}
+
+.change-info {
+
+}
+
+.percentage-change {
+	text-align: center;
+    display: inherit;
     font-size: 15px;
+    margin-top: 8px;
+    font-family: 'ProximaNovaRegular';
+}
+
+.percentage-change.increase {
+	color: chartreuse;
+}
+
+.percentage-change.increase:after {
+	content: '';
+	background-image: url('../images/up-arrow.png');
+	width: 16px;
+	height: 14px;
+	display: inline-block;
+    margin-left: 4px;
+}
+
+.percentage-change.decrease {
+	color: red;
+}
+
+.percentage-change.decrease:after {
+	content: '';
+	background-image: url('../images/down-arrow.png');
+	width: 16px;
+    height: 15px;
+    display: inline-block;
+    vertical-align: bottom;
+    margin-left: 4px;
 }
 
 .center-panel  {
@@ -94,14 +141,17 @@ html, body {
 }
 
 #chart-container {
-    height: 65%;
-    margin-top: 50px;
+    margin-top: 80px;
 }
 
 .charting-options {
-	height: 25px;
+	height: 30px;
     padding: 5px;
     background-color: rgb(0, 42, 49);
+}
+
+.chart-types {
+
 }
 
 .twitter-timeline {
@@ -115,10 +165,24 @@ html, body {
 .date-picker-container {
 	display: inline-block;
 	padding-left: 16px;
+	padding-top: 5px;
+}
+
+.date-picker-container input {
+	line-height: 17px;
 }
 
 label.to-date {
 	margin-left: 20px;
+}
+
+.live-polling-status {
+	font-size: 12px;
+    font-family: 'ProximaNovaRegular';
+}
+
+.hide { 
+	visibility: hidden;
 }
 
 /* Jquery-ui overrides */
@@ -128,20 +192,29 @@ label.to-date {
     margin-right: 0;
     padding: 3px 20px;
     font-size: 15px;
-    border-radius: 0px;
+    font-family: 'ProximaNovaBold';
 }
 
 .ui-controlgroup {
 	display: inline-block;
     float: right;
-    margin-right: 20px;
+    margin-right: 14px;
 }
 
 .ui-state-active {
-	background-color: rgba(34, 224, 5, 0.8) !important;
-    border: 1px solid rgba(34, 224, 5, 0.8) !important;
+	background-color: cyan !important; /*rgba(34, 224, 5, 0.8) !important;*/
+    border: 1px solid cyan !important; /*rgba(34, 224, 5, 0.8) !important;*/
+    color: black !important;
 }
 
 .ui-controlgroup-item:focus {
 	outline: none !important; 
+}
+
+button.ui-datepicker-trigger {
+	padding: 2px 9px 2px 9px;
+    border-radius: 7px;
+    margin-left: 2px;
+    vertical-align: top;
+    cursor: pointer;
 }
